--- a/BlazorLib2/BlazorLib2.csproj
+++ b/BlazorLib2/BlazorLib2.csproj
@@ -21,14 +21,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="content\JsInterop2.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.4.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="content\" />
   </ItemGroup>
 
 </Project>
