--- a/ClockSVGComponent/ClockSVGComponent.csproj
+++ b/ClockSVGComponent/ClockSVGComponent.csproj
@@ -17,18 +17,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="content\SvgFunctions.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="content\JsInterop2.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorSvgHelper" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.4.0" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
