--- a/BlazorApp1/BlazorApp1.csproj
+++ b/BlazorApp1/BlazorApp1.csproj
@@ -10,15 +10,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.4.0" />
-    <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.5.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.5.1" />
+    <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.5.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorLib1\BlazorLib1.csproj" />
     <ProjectReference Include="..\BlazorLib3\BlazorLib3.csproj" />
     <ProjectReference Include="..\ClockSVGComponent\ClockSVGComponent.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="DoughnutChartComponent">
+      <HintPath>..\..\BlazorDoughnutChartComponent\DoughnutChartComponent\bin\Release\netstandard2.0\DoughnutChartComponent.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
