--- a/DoughnutChartComponent/DoughnutChartComponent.csproj
+++ b/DoughnutChartComponent/DoughnutChartComponent.csproj
@@ -9,7 +9,6 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
-
   <ItemGroup>
     <!-- .js/.css files will be referenced via <script>/<link> tags; other content files will just be included in the app's 'dist' directory without any tags referencing them -->
     <EmbeddedResource Include="content\**\*.js" LogicalName="blazor:js:%(RecursiveDir)%(Filename)%(Extension)" />
@@ -18,8 +17,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.5.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.5.1" />
+    <PackageReference Include="BlazorSvgHelper" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="content\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="BlazorSvgHelper">
+      <HintPath>..\..\BlazorSvgHelper\BlazorSvgHelper\bin\Release\netstandard2.0\BlazorSvgHelper.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
