--- a/BlazorApp1/BlazorApp1.csproj
+++ b/BlazorApp1/BlazorApp1.csproj
@@ -25,6 +25,9 @@
     <Reference Include="BlazorCalculatorComponent">
       <HintPath>..\..\BlazorCalculator\BlazorCalculatorComponent\bin\Release\netstandard2.0\BlazorCalculatorComponent.dll</HintPath>
     </Reference>
+    <Reference Include="BlazorPasswordPatternComponent">
+      <HintPath>..\..\BlazorPasswordPattern\BlazorPasswordPatternComponent\bin\Release\netstandard2.0\BlazorPasswordPatternComponent.dll</HintPath>
+    </Reference>
     <Reference Include="DoughnutChartComponent">
       <HintPath>..\..\BlazorDoughnutChartComponent\DoughnutChartComponent\bin\Release\netstandard2.0\DoughnutChartComponent.dll</HintPath>
     </Reference>
