--- a/LupusaBlazorDemos/LupusaBlazorDemos.csproj
+++ b/LupusaBlazorDemos/LupusaBlazorDemos.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorJsFastDataExchanger" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0-rc1.20223.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0-rc1.20223.4" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-rc1.20223.4" PrivateAssets="all" />
@@ -16,10 +17,13 @@
     <ProjectReference Include="..\..\BlazorWebSocketHelper\BlazorWebSocketHelper.csproj" />
     <ProjectReference Include="..\..\BlazorWebWorkerHelper\BlazorWebWorkerHelper.csproj" />
     <ProjectReference Include="..\..\BlazorWindowHelper\BlazorWindowHelper.csproj" />
+    <ProjectReference Include="..\BlazorCalculatorComponent\BlazorCalculatorComponent.csproj" />
     <ProjectReference Include="..\BlazorChessComponent\BlazorChessComponent.csproj" />
     <ProjectReference Include="..\BlazorClockCanvasComponent\BlazorClockCanvasComponent.csproj" />
     <ProjectReference Include="..\BlazorClockSvgComponent\BlazorClockSvgComponent.csproj" />
     <ProjectReference Include="..\BlazorCounterHelper\BlazorCounterHelper.csproj" />
+    <ProjectReference Include="..\BlazorGameSnakeComponent\BlazorGameSnakeComponent.csproj" />
+    <ProjectReference Include="..\BlazorPaintComponent\BlazorPaintComponent.csproj" />
   </ItemGroup>
 
   <ItemGroup>
