--- a/LupusaBlazorDemos/LupusaBlazorDemos.csproj
+++ b/LupusaBlazorDemos/LupusaBlazorDemos.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BlazorJsFastDataExchanger" Version="1.0.6" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.7.20365.19" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.7.20365.19" PrivateAssets="all" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.8.20414.8" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.8.20414.8" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\BlazorJsFastDataExchanger\BlazorJsFastDataExchanger\BlazorJsFastDataExchanger.csproj" />
     <ProjectReference Include="..\..\BlazorScrollbar\BlazorScrollbarComponent\BlazorScrollbarComponent.csproj" />
     <ProjectReference Include="..\..\BlazorSharedWebWorkerWebSocketHelper\BlazorSharedWebWorkerWebSocketHelper.csproj" />
     <ProjectReference Include="..\..\BlazorSplitter\BlazorSplitterComponent\BlazorSplitterComponent.csproj" />
