--- a/BlazorChessComponent/BlazorChessComponent.csproj
+++ b/BlazorChessComponent/BlazorChessComponent.csproj
@@ -1,8 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
-		<OutputType>Library</OutputType>
 	</PropertyGroup>
 
 	<ItemGroup>
