--- a/BlazorPaintComponent/BlazorPaintComponent.csproj
+++ b/BlazorPaintComponent/BlazorPaintComponent.csproj
@@ -10,13 +10,13 @@
 
 
   <ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.8.20414.8" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.2" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\BlazorSvgHelper\BlazorSvgHelper\BlazorSvgHelper.csproj" />
-    <ProjectReference Include="..\..\BlazorWindowHelper\BlazorWindowHelper.csproj" />
+    <ProjectReference Include="..\..\MyNugetProjects\BlazorSvgHelper\BlazorSvgHelper\BlazorSvgHelper.csproj" />
+    <ProjectReference Include="..\..\MyNugetProjects\BlazorWindowHelper\BlazorWindowHelper.csproj" />
   </ItemGroup>
 
 
