--- a/BlazorCalculatorComponent/BlazorCalculatorComponent.csproj
+++ b/BlazorCalculatorComponent/BlazorCalculatorComponent.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.8.20414.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\BlazorWindowHelper\BlazorWindowHelper.csproj" />
+    <ProjectReference Include="..\..\MyNugetProjects\BlazorWindowHelper\BlazorWindowHelper.csproj" />
   </ItemGroup>
 
 
