--- a/BlazorClockCanvasComponent/BlazorClockCanvasComponent.csproj
+++ b/BlazorClockCanvasComponent/BlazorClockCanvasComponent.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.8.20414.8" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
