--- a/BlazorGameSnakeComponent/BlazorGameSnakeComponent.csproj
+++ b/BlazorGameSnakeComponent/BlazorGameSnakeComponent.csproj
@@ -9,11 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.8.20414.8" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\BlazorWindowHelper\BlazorWindowHelper.csproj" />
+    <ProjectReference Include="..\..\MyNugetProjects\BlazorWindowHelper\BlazorWindowHelper.csproj" />
   </ItemGroup>
   
 </Project>
